--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,16 +8,15 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 @layer utilities {
-  .skills-img {
-    @apply w-[50%] mx-auto m-5 px-10 py-8 ease-in-out transition duration-200 hover:transition hover:ease-in-out hover:duration-200 hover:drop-shadow-img sm:px-8 sm:py-6 md:px-4 md:py-2 lg:w-[35%];
+  .heading-section {
+    @apply cursor-default pt-1 pb-3 mt-8 mb-8 font-bold text-center w-full text-4xl  tracking-wide md:mt-5 md:mb-5 md:pt-1 md:pb-3 md:py-1;
   }
-}
 
-@layer base {
-  body {
-    @apply font-poppins;
+  .skills-img {
+    @apply w-[50%] mx-auto m-5 px-10 py-8 transition ease-in-out duration-200 hover:transition hover:ease-in-out hover:duration-200 hover:scale-110 hover:drop-shadow-img sm:px-8 sm:py-6 md:w-[40%] md:px-4 md:py-2 lg:w-[38%];
   }
 }
