--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,18 @@
   .skills-img {
     @apply w-[50%] mx-auto m-5 px-10 py-8 transition ease-in-out duration-200 hover:transition hover:ease-in-out hover:duration-200 hover:scale-110 hover:drop-shadow-img sm:px-8 sm:py-6 md:w-[40%] md:px-4 md:py-2 lg:w-[38%];
   }
+
+  .projects-img {
+    @apply max-w-[320px] mx-auto pt-5 bg-center bg-cover brightness-75 rounded transition ease-in-out duration-500 sm:max-w-[400px] md:max-w-[500px] group-hover:transition group-hover:ease-in-out group-hover:duration-500 group-hover:brightness-50;
+  }
+
+  .projects-label {
+    @apply absolute bottom-3 left-32 sm:left-48 md:left-56 lg:left-96 text-white tracking-wide transition ease-in-out duration-100 group-hover:transition group-hover:ease-in-out group-hover:duration-100 group-hover:font-bold group-hover:tracking-wider;
+  }
+
+  .projects-deskripsi {
+    @apply bg-[#2e3745] text-white max-w-[400px] sm:max-w-[450px] md:max-w-[550px] md:px-10 rounded-t-sm rounded-b-lg text-center px-5 pt-10 pb-5 mx-auto -mt-10 mb-3 text-xs flex items-center;
+  }
 }
 
 @layer base {
