--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@
   }
 
   .projects-img {
-    @apply max-w-[320px] mx-auto pt-5 bg-center bg-cover brightness-75 rounded transition ease-in-out duration-500 sm:max-w-[400px] md:max-w-[500px] group-hover:transition group-hover:ease-in-out group-hover:duration-500 group-hover:brightness-50;
+    @apply max-w-[350px] mx-auto pt-5 bg-center bg-cover brightness-75 rounded transition ease-in-out duration-500 sm:max-w-[450px] md:max-w-[550px] lg:max-w-[700px] group-hover:transition group-hover:ease-in-out group-hover:duration-500 group-hover:brightness-50;
   }
 
   .projects-label {
-    @apply absolute bottom-3 left-32 sm:left-48 md:left-56 lg:left-96 text-white tracking-wide transition ease-in-out duration-100 group-hover:transition group-hover:ease-in-out group-hover:duration-100 group-hover:font-bold group-hover:tracking-wider;
+    @apply text-white tracking-wide transition ease-in-out duration-300 group-hover:transition group-hover:ease-in-out group-hover:duration-300 group-hover:font-bold group-hover:tracking-widest;
   }
 
   .projects-deskripsi {
